--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -16,7 +16,7 @@
             android:id="@+id/titleText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="2025"
+            android:text="@string/_2025"
             android:textColor="@color/md_theme_onSurface"
             android:textSize="24sp"
             android:fontFamily="@font/jakarta_bold"
@@ -37,7 +37,7 @@
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:text="Year"
+                android:text="@string/year"
                 android:textColor="@color/md_theme_onPrimary"
                 android:fontFamily="@font/jakarta_semibold"
                 android:background="@drawable/button_unselected_background"
@@ -49,7 +49,7 @@
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:text="Month"
+                android:text="@string/month"
                 android:textColor="@color/md_theme_onPrimary"
                 android:fontFamily="@font/jakarta_semibold"
                 android:background="@drawable/button_selected_background"
@@ -61,7 +61,7 @@
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:text="Events"
+                android:text="@string/events"
                 android:textColor="@color/md_theme_onPrimary"
                 android:fontFamily="@font/jakarta_semibold"
                 android:background="@drawable/button_unselected_background"
@@ -115,7 +115,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="120dp"
-        android:contentDescription="Add Event"
+        android:contentDescription="@string/add_event"
         app:shapeAppearanceOverlay="@style/CircularImage"
         app:srcCompat="@drawable/ic_add_24"
          />
