--- a/app/src/main/res/layout/dialog_logout_confirmation.xml
+++ b/app/src/main/res/layout/dialog_logout_confirmation.xml
@@ -25,7 +25,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Log Out"
+        android:text="@string/log_out"
         android:textSize="28sp"
         android:textStyle="bold"
         android:fontFamily="@font/jakarta_bold"
@@ -37,7 +37,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Are you sure you want to log out of your account?"
+        android:text="@string/are_you_sure_you_want_to_log_out_of_your_account"
         android:textSize="18sp"
         android:fontFamily="@font/jakarta_regular"
         android:textColor="?attr/colorOnSurfaceVariant"
@@ -60,7 +60,7 @@
             android:layout_width="0dp"
             android:layout_height="56dp"
             android:layout_weight="1"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textSize="18sp"
             android:fontFamily="@font/jakarta_medium"
             android:textColor="?attr/colorOnSurface"
@@ -75,7 +75,7 @@
             android:layout_width="0dp"
             android:layout_height="56dp"
             android:layout_weight="1"
-            android:text="Log Out"
+            android:text="@string/log_out"
             android:textSize="18sp"
             android:fontFamily="@font/jakarta_medium"
             android:textColor="@color/md_theme_onError"
