--- a/app/src/main/res/layout/dialog_new_event.xml
+++ b/app/src/main/res/layout/dialog_new_event.xml
@@ -21,7 +21,7 @@
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textColor="@color/md_theme_primary"
             android:textSize="16sp"
             android:fontFamily="@font/jakarta_regular"
@@ -34,7 +34,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="New event"
+            android:text="@string/new_event"
             android:textColor="@color/md_theme_onSurface"
             android:textSize="18sp"
             android:fontFamily="@font/jakarta_bold"
@@ -44,7 +44,7 @@
             android:id="@+id/btn_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Done"
+            android:text="@string/done"
             android:textColor="@color/md_theme_onSurfaceVariant"
             android:textSize="16sp"
             android:fontFamily="@font/jakarta_regular"
@@ -79,7 +79,7 @@
                     android:id="@+id/chip_event"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Event"
+                    android:text="@string/event"
                     android:checked="true"
                     android:fontFamily="@font/jakarta_regular"
                     style="@style/Widget.MaterialComponents.Chip.Choice" />
@@ -89,7 +89,7 @@
                     android:id="@+id/chip_reminder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Reminder"
+                    android:text="@string/reminder"
                     android:fontFamily="@font/jakarta_regular"
                     style="@style/Widget.MaterialComponents.Chip.Choice" />
 
@@ -106,7 +106,7 @@
                     android:id="@+id/et_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Title"
+                    android:hint="@string/title"
                     android:textColor="@color/md_theme_onSurface"
                     android:textColorHint="@color/md_theme_onSurfaceVariant"
                     android:fontFamily="@font/jakarta_regular"
@@ -129,7 +129,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="All day"
+                    android:text="@string/all_day"
                     android:textColor="@color/md_theme_onSurface"
                     android:textSize="16sp"
                     android:fontFamily="@font/jakarta_regular" />
@@ -158,7 +158,7 @@
                 <TextView
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:text="Start"
+                    android:text="@string/start"
                     android:textColor="@color/md_theme_onSurface"
                     android:textSize="16sp"
                     android:fontFamily="@font/jakarta_regular" />
@@ -168,7 +168,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="August 20, 2025"
+                    android:text="@string/august_20_2025"
                     android:textColor="@color/md_theme_onSurface"
                     android:textSize="16sp"
                     android:fontFamily="@font/jakarta_regular"
@@ -178,7 +178,7 @@
                     android:id="@+id/tv_start_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="16:30"
+                    android:text="@string/_16_30"
                     android:textColor="@color/md_theme_onSurface"
                     android:textSize="16sp"
                     android:fontFamily="@font/jakarta_regular"
@@ -202,7 +202,7 @@
                 <TextView
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:text="End"
+                    android:text="@string/end"
                     android:textColor="@color/md_theme_onSurface"
                     android:textSize="16sp"
                     android:fontFamily="@font/jakarta_regular" />
@@ -212,7 +212,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="August 20, 2025"
+                    android:text="@string/august_20_2025"
                     android:textColor="@color/md_theme_onSurface"
                     android:textSize="16sp"
                     android:fontFamily="@font/jakarta_regular"
@@ -222,7 +222,7 @@
                     android:id="@+id/tv_end_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="17:30"
+                    android:text="@string/_17_30"
                     android:textColor="@color/md_theme_onSurface"
                     android:textSize="16sp"
                     android:fontFamily="@font/jakarta_regular"
