--- a/app/src/main/res/layout/item_chat_message.xml
+++ b/app/src/main/res/layout/item_chat_message.xml
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/jakarta_medium"
-                android:text="Hello World"
+                android:text="@string/hello_world"
                 android:textColor="@color/md_theme_onSurface"
                 android:textSize="16sp" />
         </LinearLayout>
@@ -81,7 +81,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/jakarta_medium"
-                android:text="Hello World"
+                android:text="@string/hello_world"
                 android:textColor="@color/md_theme_primary"
                 android:textSize="16sp" />
         </LinearLayout>
